--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- favorite -->
+    <string name="add_fav">Add To Favorites</string>
+    <string name="remove_fav">Remove From Favorites</string>
 </resources>
