--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,16 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
-    <!-- favorite -->
+    <!-- main menu -->
+    <string name="fav_movies">Favorite</string>
+    <string name="popular_movies">Popular</string>
+    <string name="top_rated_movies">Top Rated</string>
+    <!-- <string name="latest_movies">Latest</string> -->
+    <string name="now_playing_movies">Now Playing</string>
+    <string name="upcoming_movies">Upcoming</string>
+
+    <!-- favorite btn-->
     <string name="add_fav">Add To Favorites</string>
     <string name="remove_fav">Remove From Favorites</string>
+
 </resources>
