--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <!-- main menu -->
+    <string name="search">Search</string>
     <string name="fav_movies">Favorite</string>
     <string name="popular_movies">Popular</string>
     <string name="top_rated_movies">Top Rated</string>
